--- a/view/assets/css/class.css
+++ b/view/assets/css/class.css
@@ -8,6 +8,9 @@
     max-width: 1080px;
     margin: auto;
 }
+.logotipo {
+    margin-right: 60%;
+}
 .vaga {
     padding: 20px; 
     border: 1px dashed var(--preto);
